--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scalonator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.19.0",
     "ejs": "3.1.5",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "redis": "3.0.2"
   },
   "devDependencies": {
     "nodemon": "2.0.4"
